<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>io.fabric8</groupId>
    <artifactId>kubernetes-client-project</artifactId>
    <version>6.11-SNAPSHOT</version>
    <relativePath>../../pom.xml</relativePath>
  </parent>

    <artifactId>kube-api-test-parent</artifactId>

    <packaging>pom</packaging>

    <name>Kube API Test Parent</name>
    <description>Library to support testing against Kubernetes API server</description>

    <properties>
        <maven.compiler.release>11</maven.compiler.release>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
    </properties>

    <modules>
        <module>core</module>
        <module>client-inject</module>
    </modules>

</project>
